--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -18,6 +18,9 @@
             <ul id="list">
 
             </ul>
+            <br>
+
+            <button id="removeBtn">remove</button>
         </div>
     </div>
 
