--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="body">
+    <div id="wholeContent">
         <h1>My ToDo List</h1>
         <div id="toDos">
             <input id="input" type="text">
